[package]
name = "hexi_math"
version = "0.0.1"
authors = ["Stephen Gutekanst <stephen.gutekanst@gmail.com>"]
description = "Game & graphics math in two and three dimensions."
homepage = "https://hexops.com/hexi/math"
repository = "https://github.com/hexops/hexi"
keywords = ["hexops", "hexi", "game", "engine", "math"]
license = "BSD-3-Clause"

[dependencies]
